# mkt_research_multiagent

./: README.md  justfile  pyproject.toml  report.md
src/mkt_research_multiagent/: crew.py  main.py
src/mkt_research_multiagent/tools/: custom_tool.py
